# YOLO11_GRU_LOB

./: README.md
backend/app/: main.py  pyproject.toml
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: alert.py  collected_video.py  data_collection_job.py  dataset.py  enums.py  evaluation_result.py  labeling_task.py  recognition_log.py  standard_process_chart.py  stream_session.py  worker_detection.py
backend/app/schemas/: __init__.py  external_events.py  health.py
backend/app/schemas/ai_models/: __init__.py  create.py  update.py
backend/app/schemas/annotations/: create.py  update.py
backend/app/schemas/camera/: create.py  update.py
backend/app/schemas/collected_videos/: update.py
backend/app/schemas/data_collection_jobs/: __init__.py  create.py  response.py
backend/app/schemas/datasets/: create.py
backend/app/schemas/efficiency_metrics/: __init__.py  create.py  response.py  update.py
backend/app/schemas/evaluation_results/: __init__.py  update.py
backend/app/schemas/labeling_tasks/: __init__.py  response.py  update.py
backend/app/schemas/lob_eb_criteria/: __init__.py  create.py
backend/app/schemas/mes_sync_logs/: response.py
backend/app/schemas/nvr/: __init__.py  response.py  status.py
backend/app/schemas/process_flows/: __init__.py  create.py
backend/app/schemas/processes/: __init__.py
backend/app/schemas/recognition_logs/: __init__.py
backend/app/schemas/roles/: create.py  (+1 more)
backend/app/services/: cctv_streaming_service.py  external_event_log_service.py
(+212 files in other folders)
