[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmecca-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend boilerplate for Cosmecca."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "openpyxl>=3.1.5,<4.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "pydantic[email]>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.0,<1.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
